--- a/src/main/java/view/TelaInicial.form
+++ b/src/main/java/view/TelaInicial.form
@@ -101,7 +101,11 @@
           </grid>
           <scrollpane id="a3abb">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="400"/>
+                <preferred-size width="-1" height="400"/>
+                <maximum-size width="-1" height="400"/>
+              </grid>
             </constraints>
             <properties>
               <horizontalScrollBarPolicy value="31"/>
@@ -111,14 +115,14 @@
               <grid id="452d9" binding="cartPanel" custom-create="true" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints/>
                 <properties>
-                  <autoscrolls value="false"/>
+                  <autoscrolls value="true"/>
                 </properties>
                 <border type="none"/>
                 <children/>
               </grid>
             </children>
           </scrollpane>
-          <grid id="97933" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="97933" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -130,19 +134,6 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="554a3" class="javax.swing.JButton" binding="cancelarButton" default-binding="true">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="24"/>
-                    <preferred-size width="-1" height="24"/>
-                    <maximum-size width="-1" height="24"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <font size="18"/>
-                  <text value="Cancelar"/>
-                </properties>
-              </component>
               <component id="1177" class="javax.swing.JButton" binding="finalizarCompraButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -154,12 +145,22 @@
                 <properties>
                   <focusable value="false"/>
                   <font size="18"/>
-                  <text value="Finalizar Compra"/>
+                  <text value="Pagamento"/>
                 </properties>
               </component>
+              <hspacer id="5a90d">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <hspacer id="5b9ef">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
-          <grid id="c2888" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="c2888" binding="panelDeMerda" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -193,7 +194,9 @@
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <model/>
+                </properties>
               </component>
             </children>
           </grid>
@@ -232,11 +235,18 @@
               </component>
             </children>
           </grid>
-          <scrollpane id="48101">
+          <scrollpane id="48101" binding="scrollProductPanel">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="1" use-parent-layout="false">
+                <minimum-size width="-1" height="550"/>
+                <preferred-size width="-1" height="550"/>
+                <maximum-size width="-1" height="550"/>
+              </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <horizontalScrollBarPolicy value="30"/>
+              <verticalScrollBarPolicy value="22"/>
+            </properties>
             <border type="none"/>
             <children>
               <grid id="ad613" binding="productPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
