--- a/src/main/java/view/TelaInicial.form
+++ b/src/main/java/view/TelaInicial.form
@@ -3,14 +3,14 @@
   <grid id="27dc6" binding="telaInicial" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="26" width="715" height="576"/>
+      <xy x="20" y="26" width="715" height="707"/>
     </constraints>
     <properties>
       <background color="-5185306"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="6c5d9" binding="menu" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6c5d9" binding="menu" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
@@ -55,6 +55,15 @@
               <text value="Sair"/>
             </properties>
           </component>
+          <hspacer id="79676">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="20" height="20"/>
+                <preferred-size width="20" height="20"/>
+                <maximum-size width="20" height="20"/>
+              </grid>
+            </constraints>
+          </hspacer>
           <hspacer id="b42fd">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -62,7 +71,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="21707" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="21707" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -102,9 +111,9 @@
           <scrollpane id="a3abb">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="400"/>
-                <preferred-size width="-1" height="400"/>
-                <maximum-size width="-1" height="400"/>
+                <minimum-size width="-1" height="450"/>
+                <preferred-size width="-1" height="450"/>
+                <maximum-size width="-1" height="450"/>
               </grid>
             </constraints>
             <properties>
@@ -123,13 +132,9 @@
             </children>
           </scrollpane>
           <grid id="97933" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+            <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="28"/>
-                <preferred-size width="-1" height="28"/>
-                <maximum-size width="-1" height="28"/>
-              </grid>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -137,14 +142,14 @@
               <component id="1177" class="javax.swing.JButton" binding="finalizarCompraButton" default-binding="true">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <minimum-size width="-1" height="24"/>
-                    <preferred-size width="-1" height="24"/>
-                    <maximum-size width="-1" height="24"/>
+                    <minimum-size width="-1" height="45"/>
+                    <preferred-size width="-1" height="45"/>
+                    <maximum-size width="-1" height="45"/>
                   </grid>
                 </constraints>
                 <properties>
                   <focusable value="false"/>
-                  <font size="18"/>
+                  <font size="16" style="1"/>
                   <text value="Pagamento"/>
                 </properties>
               </component>
@@ -160,46 +165,16 @@
               </hspacer>
             </children>
           </grid>
-          <grid id="c2888" binding="panelDeMerda" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <vspacer id="8f18e">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="4614a" class="javax.swing.JComboBox" binding="formasPagamentot">
-                <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="90fd9" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Forma de Pagamento"/>
-                </properties>
-              </component>
-              <component id="14f11" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Cliente"/>
-                </properties>
-              </component>
-              <component id="15e27" class="javax.swing.JComboBox" binding="clientes">
-                <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <model/>
-                </properties>
-              </component>
-            </children>
-          </grid>
+          </vspacer>
+          <vspacer id="ebbf2">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
       <grid id="83bde" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
