--- a/src/main/java/view/TelaLogin.form
+++ b/src/main/java/view/TelaLogin.form
@@ -108,12 +108,12 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="cc2eb" class="javax.swing.JButton" binding="telaPagamentoButton" default-binding="true">
+      <component id="5b765" class="javax.swing.JButton" binding="notaFiscalButton" default-binding="true">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="TelaPagamento"/>
+          <text value="Nota Fiscal"/>
         </properties>
       </component>
     </children>
