terminei essa bosta

--- a/src/main/java/view/TelaLogin.form
+++ b/src/main/java/view/TelaLogin.form
@@ -108,14 +108,11 @@
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="5b765" class="javax.swing.JButton" binding="notaFiscalButton" default-binding="true">
+      <vspacer id="da6de">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <text value="Nota Fiscal"/>
-        </properties>
-      </component>
+      </vspacer>
     </children>
   </grid>
 </form>
