--- a/src/main/java/view/TelaPagamento.form
+++ b/src/main/java/view/TelaPagamento.form
@@ -93,7 +93,7 @@
                   <text value="Finalizar Pagamento"/>
                 </properties>
               </component>
-              <component id="5127" class="javax.swing.JLabel">
+              <component id="5127" class="javax.swing.JLabel" binding="clienteLabel">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -109,12 +109,12 @@
                   <text value="Forma de Pagamento"/>
                 </properties>
               </component>
-              <component id="53c8b" class="javax.swing.JCheckBox" binding="inserirClienteNaVendaCheckBox" default-binding="true">
+              <component id="53c8b" class="javax.swing.JCheckBox" binding="informarClienteCheckbox">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Inserir cliente na venda"/>
+                  <text value="Informar cliente na venda"/>
                 </properties>
               </component>
               <vspacer id="a63f2">
@@ -177,7 +177,7 @@
                   <text value="Gerar Nota Fiscal"/>
                 </properties>
               </component>
-              <grid id="8fb21" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="8fb21" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -185,13 +185,13 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="fc7db" class="javax.swing.JLabel">
+                  <component id="fc7db" class="javax.swing.JLabel" binding="valorTotal">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font size="16" style="1"/>
-                      <text value="Valor Total: R$ 0,00"/>
+                      <text value="00.00"/>
                     </properties>
                   </component>
                   <hspacer id="e9f5c">
@@ -201,9 +201,18 @@
                   </hspacer>
                   <hspacer id="8fe97">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
+                  <component id="69217" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font size="16" style="1"/>
+                      <text value="Valor Total: R$"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <vspacer id="2609">
